skin/scss/blocks/production/_details.scss
#details {
    background-color: $details-bg;
    height: 100%;
    right: 0;
    letter-spacing: 1px;
    top: 0;
    width: 15%;
    z-index: 10;

    [data-orientation="vertical"] & {
    }

    input[type="checkbox"] {
        display: none;
    }

    .empty {
        cursor: default;
        letter-spacing: 2px;
        height: 100%;
        padding: 1em;
        text-align: center;
        @include align-items(center);
        @include display-flex(flex);
        @include justify-content(center);

        p {
            line-height: 25px;
        }

        button {
            background-color: $teal;
            border: 0 none;
            color: white;
            cursor: default;
            font-size: 9px;
            font-weight: 900;
            height: 25px;
            letter-spacing: 1px;
            width: 100px;
        }
    }

    .images, .outer {
        display: none;
    }

    input[type="checkbox"]:checked {
        & ~ .empty {
            display: none;
        }
        & ~.images, & ~ .outer {
            display: block;
        }
    }

    .images {
        width: 100%;
        padding: 10px;
        background-color: #d4d4d4;
    }

    .wrap {
        height: 100%;
        overflow: hidden;
        position: relative;
        width: 100%;

        &:hover:before, &[data-measurement-toggle="true"]:before {
            left: 0;
        }

        &[data-measurement-toggle="true"]:after {
            display: none;
        }
        &[data-measurement-toggle="true"] {
            .arrows {
                display: none;
            }
        }

        .arrows {
            height: 100%;
            left: 0;
            position: absolute;
            top: 0;
            width: 27px;

            &:before, &:after {
                border-top: 5px solid transparent;
                border-bottom: 5px solid transparent;
                border-left: 7px solid $white;
                border-right: none;
                content: "";
                position: absolute;
                right: 10px;
                z-index: 10;
            }

            &:before {
                top: 15px;
            }

            &:after {
                bottom: 15px;
            }

        }

        &:hover:after, &:hover .arrows {
            visibility: hidden;
        }

        &:before, &:after {
            background-color: rgba(0,0,0,0.75);
            background-size: 100% auto;
            background-position: center center;
            background-repeat: no-repeat;
            position: absolute;
            content: "";
            height: 100%;
            top: 0;
            left: 0;
        }

        &:before {
            width: 100%;
            z-index: 5;
            left: -90%;
            @include transition(left 0.2s ease-out);
        }

        &:after {
            background-image: url($media-folder + 'details/see-measurements.png');
            background-size: 45%;
            width: 10%;
            z-index: 9;
        }
    }

    $plugs: (
        'neutrik' 'np2c' 'np2c-b' 'np2c-bag' 'np2rx' 'np2rx-b' 'np2rx-silent' 'np2x-b' 'np2x-silent' 'nys224bg' 'nys224g',
        'g#{"&"}h' 'bf2p' 'rf2p',
        'switchcraft' '228-pancake' '280' '380',
    );
    @each $plug in $plugs {
        $manufacturer: nth($plug, 1);

        @for $i from 2 to (length($plug) + 1) {
            $val: nth($plug, $i);
            &[data-option-id="ins_#{$manufacturer}_#{$val}"] {
                .images .wrap:before {
                    background-image: url($media-folder + 'builder/plug/instrument/#{$manufacturer}/overlay/#{$val}.png');
                }
            }
        }
    }

    img {
        width: 100%;
    }

    img.choice {
        position: absolute;
        top: 0;
    }

    .outer {
        padding: 15px;
    }

    .choices {
        overflow: hidden;
        padding: 9px 0;

        &:before {
            content: "Available colors:";
            text-transform: uppercase;
            display: block;
            font-size: 10px;
            font-weight: 800;
            margin-bottom: 5px;
        }

        div {
            $size: 40px;
            border: #848484 solid 2px;
            cursor: pointer;
            height: $size;
            margin: 0 2px;
            float: left;
            pointer-events: auto;
            position: relative;
            width: $size;

            &:active {
                opacity: 0.9;
            }
        }

        $colors: (
            'red' #e90d2f,
            'orange' #ff864f,
            'yellow' #fcf86c,
            'green' #25c265,
            'violet' #6154ba,
            'black' #000,
            'gray' #999da3,
            'white' #fff,
            'gold' #fff282,
            'nickel' #dce4f5,
        );

        @for $i from 1 to length($colors) + 1 {
            $c1: nth( nth($colors, $i), 1);
            $c2: nth( nth($colors, $i), 2);

            [data-choice-value="#{$c1}"] {
                background-color: #{$c2};
            }
        }
    }

    .specs {
        letter-spacing: 1px;
        text-transform: uppercase;
        padding: 6px 0;
        span {
            color: #b1b1b1;
            cursor: default;
            display: block;
            font-size: 10px;
            font-weight: 800;
            margin: 8px 0;

            &.capacitance:after {
                content: " pf/ft";
                text-transform: uppercase;
            }

            &.diameter:after {
                content: '"';

            }
        }

        strong {
            color: $teal;
            font-size: 12px;
        }
    }

    .name {
        cursor: default;
        letter-spacing: 1px;
        text-transform: uppercase;
        margin-bottom: 10px;

        span, strong {
            display: block;
        }

        span {
            font-size: 13px;
            margin-bottom: 2px;
        }

        strong {
            font-size: 14px;
            font-weight: 800;
        }
    }

    .price, .specs, .choices {
        border-bottom: 1px solid #adadad;
    }

    .price {
        color: $red;
        cursor: default;
        font-weight: 800;
        font-size: 12px;
        padding-bottom: 5px;

        &:before {
            content: "$";
        }
    }

    .select {
        background-color: $black;
        color: $white;
        border: 0;
        margin-top: 20px;
        font-size: 10px;
        height: 25px;
        width: 90px;
    }

    &[data-option-component="cable"] {
        .wrap:before, .wrap:after {
            display: none;
        }

        .price:after {
            content:" per ft";
            color: gray;
            font-size: 9px;
            font-weight: 300;
            text-transform: uppercase;
        }
    }

    &[data-option-component="plug"] {
        .wrap {
            cursor: pointer;
        }
    }

    &[data-oos="true"] {
        .select {
            display: none;
        }
    }

    .choices [data-oos="true"] {
        &:before, &:after {
            content: "";
            background-color: $red;
            width: 3px;
            height: 100%;
            position: absolute;
            top: 0;
        }

        &:before {
            @include transform(rotate(45deg));
            left: 16px;
        }

        &:after {
            @include transform(rotate(-45deg));
            right: 17px;
        }
    }
}

